playing around with require js and writing up the functions into amd

--- a/bower.json
+++ b/bower.json
@@ -23,5 +23,8 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "requirejs": "~2.1.22"
+  },
+  "install": {
+    "path": "scripts/libs"
   }
 }
