--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "maps",
   "version": "1.0.0",
-  "description": "",
+  "description": "A lost pet tracker using facebook posts of lost pets and location markers with google maps",
   "main": "index.html",
   "dependencies": {
     "bower": "^1.7.2",
+    "bower-installer": "^1.2.0",
     "google-maps": "^3.1.0",
-    "grunt": "^0.4.5",
-    "grunt-bower-concat": "^0.6.0",
     "requirejs": "^2.1.22"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "cjbarton01@gmail.com",
   "license": "ISC"
 }
