--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
   ],
   "dependencies": {
     "jquery": "~2.1.4",
-    "requirejs": "~2.1.22"
+    "requirejs": "~2.1.22",
+    "requirejs-plugins": "~1.0.3"
   },
   "install": {
     "path": "scripts/libs"
