--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bower": "^1.7.2",
     "bower-installer": "^1.2.0",
+    "http-server": "^0.8.5",
     "requirejs": "^2.1.22"
   },
   "devDependencies": {},
