Add libs that are not in bower

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ node_modules/*
 bower_components
 bower_components/*
 scripts/libs/**/*
+!scripts/libs/fb.js
+!scripts/libs/googlemaps.js
 bk
 bk/*
 rename.sh
