--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "requirejs": "~2.1.22",
-    "requirejs-plugins": "~1.0.3"
+    "requirejs-plugins": "~1.0.3",
+    "requirejs-hogan-plugin": "~0.3.1"
   },
   "install": {
     "path": "scripts/libs"
