--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "http-server": "^0.8.5",
     "requirejs": "^2.1.22"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "express": "^4.14.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
