--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "dependencies": {
     "bower": "^1.7.2",
     "bower-installer": "^1.2.0",
-    "http-server": "^0.8.5",
-    "requirejs": "^2.1.22"
-  },
-  "devDependencies": {
+    "requirejs": "^2.1.22",
     "express": "^4.14.0"
   },
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "cjbarton01@gmail.com",
