--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "express": "^4.14.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "cjbarton01@gmail.com",
