--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "bower": "^1.7.2",
     "bower-installer": "^1.2.0",
-    "requirejs": "^2.1.22",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "fb": "^1.1.1",
+    "nodemon": "^1.11.0",
+    "requirejs": "^2.1.22"
   },
   "scripts": {
     "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "cjbarton01@gmail.com",
