--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bower-installer": "^1.2.0",
     "express": "^4.14.0",
     "fb": "^1.1.1",
+    "leaflet": "^1.0.2",
     "nodemon": "^1.11.0",
     "requirejs": "^2.1.22"
   },
