--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.14.0",
     "fb": "^1.1.1",
     "leaflet": "^1.0.2",
+    "node-schedule": "^1.2.0",
     "nodemon": "^1.11.0",
     "requirejs": "^2.1.22"
   },
